--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Oleg Tcaregorodtcev
-  # email: # change to your email address
+  email: info@oleg-it.com
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/oleg-politechnik
