Added About info

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Europe/Berlin
 
 title: Oleg IT Consulting # the main title
 
-tagline: Oleg IT Consulting # it will display as the sub-title
+tagline: Always strive for the best, never cease to excel
 
 description: >- # used by seo meta and the atom feed
   Oleg IT Consulting
